# diesel_original_demo

./: .env  Cargo.toml
migrations/2021-01-05-143039_create_todo/: up.sql
migrations/2021-01-05-160300_create_todos/: up.sql
migrations/2021-01-05-172814_create_note/: up.sql
src/: main.rs  models.rs  schema.rs
