[package]
name = "diesel_original_demo"
version = "0.1.0"
authors = ["progllama"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
chrono = "0.4.0"
r2d2 = "0.8"
dotenv = "0.15.0"
lazy_static = "1.1.0"